# seq2seq-cutlass-inference

./: CMakeLists.txt  setup_tests.sh
inference_server_cutlass/include/layers/: Decoder.h  MultiHeadAttention.h  layer.cuh  layer.h  lstmcell.h
inference_server_cutlass/include/utils/: utils.cuh
inference_server_cutlass/src/layers/: Decoder.cu  MultiHeadAttention.cu  embedding.cu  linear.cu  lstmcell.cu
src/: build_tokenizer.py  common_utils.py  dataset.py  quantize_model.sh  split_data.py
src/jax_implementation/: batched_inference.py  check_param_dtypes.py  ddp_train.py  model.py  quantize_model_weights.py  quantize_model_weights_calibrated.py  train.py  utils.py
src/pytorch_new_implementation/: model.py
tests/inference_server_cutlass/test_layers/: test_Embedding.cu  test_Encoder.cu  test_LSTM.cu  test_LSTMCell.cu  test_Linear.cu
